# sh-history-filter

./: Cargo.toml  README.md
src/: args.rs  cfg.rs  main.rs  ordered_hash_set.rs  ordered_set.rs
src/processor/: bash.rs  fish.rs
