[package]
name = "sh-history-filter"
version = "0.0.4"
edition = "2021"
description = "Shell history filter"
license = "MIT"
repository = "https://github.com/Thaumy/sh-history-filter"
keywords = ["shell", "history", "filter"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
clap = { version = "4.4.3", features = ["derive"] }
home = "0.5.5"
term_size = "0.3.2"
toml = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
regex = "1.9.5"
thiserror = "1.0.48"