[package]
name = "sh-history-filter"
version = "0.0.5"
edition = "2021"
description = "Shell history filter"
license = "MIT"
repository = "https://github.com/Thaumy/sh-history-filter"
keywords = ["shell", "history", "filter"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
colored = "3.0"
clap = { version = "4.5", features = ["derive"] }
home = "0.5"
term_size = "0.3"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"
thiserror = "2.0"
